updated markdown info

--- a/CS 3A/KYLA_ELIJAH_RAMIRO/RAMIRO-EXERCISE_2.ipynb
+++ b/CS 3A/KYLA_ELIJAH_RAMIRO/RAMIRO-EXERCISE_2.ipynb
@@ -2,15 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "22b5138e",
+   "metadata": {},
+   "source": [
+    "**Name:** Jullian A. Bilan\n",
+    "\n",
+    "**Name:** Kyla Elijah C. Ramiro\n",
+    "\n",
+    "**Section:** BSCS-3A AI \n",
+    "\n",
+    "**Subject:** Artificial Neural Networks  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6e31af21",
    "metadata": {},
    "source": [
     "## **Task: Implement Dense_Layer Class**\n",
     "\n",
-    "For this exercise, I created a custom **Dense_Layer class** in Python and used it to solve two problems:  \n",
+    "For this exercise, we created a **Dense_Layer class** in Python and used it to solve two problems:  \n",
     "\n",
-    "1. **Iris Dataset Classification**  \n",
-    "2. **Breast Cancer Classification**  \n",
+    "1. **Iris Dataset Classification** - implemented by *Jullian*\n",
+    "2. **Breast Cancer Classification** - implemented by *Kyla*\n",
     "\n",
     "The class was designed to handle the basic operations of a dense neural network layer, including:  \n",
     "- Setting up inputs, weights, and biases  \n",
@@ -21,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "5aac2591",
    "metadata": {},
    "outputs": [],
@@ -55,6 +69,7 @@
    "metadata": {},
    "source": [
     "## **Problem 1: Iris Dataset Classification**  \n",
+    "#### By: *Jullian Bilan*\n",
     "\n",
     "This problem uses a **3-layer neural network** to predict the class of an iris flower (Setosa, Versicolor, or Virginica) based on four features: **sepal length, sepal width, petal length, and petal width**.  \n",
     "\n",
@@ -134,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "5d0bce02",
    "metadata": {},
    "outputs": [
@@ -195,6 +210,7 @@
    "metadata": {},
    "source": [
     "## **Problem 2: Breast Cancer Classification**  \n",
+    "#### By: *Kyla Elijah Ramiro*\n",
     "\n",
     "This problem uses a **3-layer neural network** to predict whether a tumor is **Benign (0)** or **Malignant (1)** based on three features: **mean radius, mean texture, and mean smoothness**.  \n",
     "\n",
@@ -264,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "cd097dc0",
    "metadata": {},
    "outputs": [
@@ -316,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "2d65b202",
    "metadata": {},
    "outputs": [
