exercise 2, activation functions.

--- a/CS 3A/MEAGELLEINE_ROSE_SIONOSA/SIONOSA_EXERCISE_2.ipynb
+++ b/CS 3A/MEAGELLEINE_ROSE_SIONOSA/SIONOSA_EXERCISE_2.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "7f1915ef",
    "metadata": {},
    "outputs": [
@@ -227,6 +227,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6135f143",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== IRIS DATASET CLASSIFICATION ===\n",
+      "Output probabilities (A3): [0.0265 0.9687 0.0048]\n",
+      "Target output: [0.7 0.2 0.1]\n",
+      "\n",
+      "Predicted class index: 1\n",
+      "Predicted class: Versicolor\n",
+      "Confidence: 0.9687 (96.87%)\n",
+      "\n",
+      "Correct class index: 1\n",
+      "Correct class: Versicolor\n",
+      "\n",
+      "--- RESULT ---\n",
+      "The model predicts this iris sample belongs to class: Versicolor\n",
+      "The correct class should be: Versicolor\n",
+      "Prediction is CORRECT\n"
+     ]
+    }
+   ],
+   "source": [
+    "# IRIS DATASET - CLASS DETERMINATION\n",
+    "print('=== IRIS DATASET CLASSIFICATION ===')\n",
+    "print('Output probabilities (A3):', np.round(A3, 4))\n",
+    "print('Target output:', target_output)\n",
+    "\n",
+    "# Determine predicted class (highest probability)\n",
+    "predicted_class_idx = np.argmax(A3)\n",
+    "iris_classes = ['Setosa', 'Versicolor', 'Virginica']\n",
+    "predicted_class = iris_classes[predicted_class_idx]\n",
+    "\n",
+    "print(f'\\nPredicted class index: {predicted_class_idx}')\n",
+    "print(f'Predicted class: {predicted_class}')\n",
+    "print(f'Confidence: {A3[predicted_class_idx]:.4f} ({A3[predicted_class_idx]*100:.2f}%)')\n",
+    "\n",
+    "# The correct target class should be Versicolor (index 1)\n",
+    "# Based on the input features: X = [5.1, 3.5, 1.4, 0.2]\n",
+    "correct_class_idx = 1  # Versicolor\n",
+    "correct_class = iris_classes[correct_class_idx]\n",
+    "print(f'\\nCorrect class index: {correct_class_idx}')\n",
+    "print(f'Correct class: {correct_class}')\n",
+    "\n",
+    "# Classification result\n",
+    "print(f'\\n--- RESULT ---')\n",
+    "print(f'The model predicts this iris sample belongs to class: {predicted_class}')\n",
+    "print(f'The correct class should be: {correct_class}')\n",
+    "print(f'Prediction is {\"CORRECT\" if predicted_class_idx == correct_class_idx else \"INCORRECT\"}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "871e702e",
    "metadata": {},
@@ -255,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "6d55c7d2",
    "metadata": {},
    "outputs": [
@@ -320,6 +377,65 @@
     "# --- Loss ---\n",
     "loss_bc = np.mean((A3_bc - target_output_bc) ** 2)\n",
     "print('Loss (MSE):', np.round(loss_bc, 6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "045f0b77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== BREAST CANCER DATASET CLASSIFICATION ===\n",
+      "Output probability (A3): [0.7025]\n",
+      "Target output: [1]\n",
+      "\n",
+      "Predicted probability: 0.7025\n",
+      "Classification threshold: 0.5\n",
+      "Predicted class: 1 (Malignant)\n",
+      "Target class: 1 (Malignant)\n",
+      "Confidence: 0.7025 (70.25%)\n",
+      "\n",
+      "--- RESULT ---\n",
+      "The model predicts this breast tissue sample is: Malignant\n",
+      "The actual target class is: Malignant\n",
+      "Prediction is CORRECT\n"
+     ]
+    }
+   ],
+   "source": [
+    "# BREAST CANCER DATASET - MALIGNANT/BENIGN DETERMINATION\n",
+    "print('=== BREAST CANCER DATASET CLASSIFICATION ===')\n",
+    "print('Output probability (A3):', np.round(A3_bc, 4))\n",
+    "print('Target output:', target_output_bc)\n",
+    "\n",
+    "# Determine predicted class based on threshold (typically 0.5 for binary classification)\n",
+    "threshold = 0.5\n",
+    "predicted_probability = A3_bc[0]\n",
+    "predicted_class = 1 if predicted_probability >= threshold else 0\n",
+    "\n",
+    "# Class labels for breast cancer\n",
+    "cancer_classes = {0: 'Benign', 1: 'Malignant'}\n",
+    "predicted_label = cancer_classes[predicted_class]\n",
+    "target_label = cancer_classes[target_output_bc[0]]\n",
+    "\n",
+    "print(f'\\nPredicted probability: {predicted_probability:.4f}')\n",
+    "print(f'Classification threshold: {threshold}')\n",
+    "print(f'Predicted class: {predicted_class} ({predicted_label})')\n",
+    "print(f'Target class: {target_output_bc[0]} ({target_label})')\n",
+    "\n",
+    "# Classification confidence\n",
+    "confidence = predicted_probability if predicted_class == 1 else (1 - predicted_probability)\n",
+    "print(f'Confidence: {confidence:.4f} ({confidence*100:.2f}%)')\n",
+    "\n",
+    "# Classification result\n",
+    "print(f'\\n--- RESULT ---')\n",
+    "print(f'The model predicts this breast tissue sample is: {predicted_label}')\n",
+    "print(f'The actual target class is: {target_label}')\n",
+    "print(f'Prediction is {\"CORRECT\" if predicted_class == target_output_bc[0] else \"INCORRECT\"}')"
    ]
   }
  ],
