exercise 2, activation function

--- a/CS 3A/MEAGELLEINE_ROSE_SIONOSA/SIONOSA_EXERCISE_2.ipynb
+++ b/CS 3A/MEAGELLEINE_ROSE_SIONOSA/SIONOSA_EXERCISE_2.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "410017f9",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2306c6e1",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "7f1915ef",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "6135f143",
    "metadata": {},
    "outputs": [
@@ -290,9 +290,12 @@
    "source": [
     "# Breast Cancer Dataset\n",
     "\n",
-    "**Inputs:**\n",
+    "**Inputs (Features):**\n",
+    "- Mean Radius = 14.1\n",
+    "- Mean Texture = 20.3  \n",
+    "- Mean Smoothness = 0.095\n",
     "- X = [14.1, 20.3, 0.095]\n",
-    "- Target_output = [1]\n",
+    "- Target_output = [1] (1 = Malignant, 0 = Benign)\n",
     "\n",
     "**Layer 1:**\n",
     "- W1 = [[0.5, -0.3, 0.8], [0.2, 0.4, -0.6], [-0.7, 0.9, 0.1]]\n",
@@ -312,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "6d55c7d2",
    "metadata": {},
    "outputs": [
@@ -320,6 +323,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "=== INPUT FEATURES ===\n",
+      "Mean Radius: 14.1\n",
+      "Mean Texture: 20.3\n",
+      "Mean Smoothness: 0.095\n",
+      "Input vector (X): [14.1   20.3    0.095]\n",
+      "Target output: 1 (Malignant)\n",
+      "\n",
       "--- Layer 1 (ReLU) ---\n",
       "Weighted sum (Z1): [11.3435  3.4755 -0.2905]\n",
       "Activation (A1):    [11.3435  3.4755  0.    ] \n",
@@ -340,9 +350,20 @@
     "# BREAST CANCER DATASET\n",
     "import numpy as np\n",
     "\n",
-    "# --- Input and Target ---\n",
-    "X_bc = np.array([14.1, 20.3, 0.095]) # input x\n",
-    "target_output_bc = np.array([1]) # target \n",
+    "# --- Input Features ---\n",
+    "mean_radius = 14.1\n",
+    "mean_texture = 20.3\n",
+    "mean_smoothness = 0.095\n",
+    "\n",
+    "X_bc = np.array([mean_radius, mean_texture, mean_smoothness]) # input features\n",
+    "target_output_bc = np.array([1]) # target (1 = Malignant, 0 = Benign)\n",
+    "\n",
+    "print('=== INPUT FEATURES ===')\n",
+    "print(f'Mean Radius: {mean_radius}')\n",
+    "print(f'Mean Texture: {mean_texture}')\n",
+    "print(f'Mean Smoothness: {mean_smoothness}')\n",
+    "print(f'Input vector (X): {X_bc}')\n",
+    "print(f'Target output: {target_output_bc[0]} ({\"Malignant\" if target_output_bc[0] == 1 else \"Benign\"})\\n')\n",
     "\n",
     "# --- First Hidden Layer ---\n",
     "W1_bc = np.array([[0.5, -0.3, 0.8],\n",
@@ -381,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "045f0b77",
    "metadata": {},
    "outputs": [
