resubmitted Exercise 2 | Villarin

--- a/CS 3A/ATHENA_VILLARIN/VILLARIN-EXERCISE_2.ipynb
+++ b/CS 3A/ATHENA_VILLARIN/VILLARIN-EXERCISE_2.ipynb
@@ -23,12 +23,12 @@
     "- Setup inputs and weights  \n",
     "- Weighted sum + bias  \n",
     "- Activation functions (ReLU, Sigmoid, Softmax)  \n",
-    "- Loss functions (Cross-Entropy)"
+    "- Loss functions (MSE, (Cross-)Entropy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "3c7bf730",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,9 @@
     "\n",
     "    # (b) Function to perform weighted sum + bias\n",
     "    def weighted_sum(self):\n",
-    "        return np.dot(self.inputs, self.weights) + self.biases\n",
+    "        inputs_col = self.inputs.reshape(-1, 1)\n",
+    "        result = np.dot(self.weights, inputs_col).flatten() + self.biases\n",
+    "        return result\n",
     "\n",
     "    # (c) Function to perform activation function\n",
     "    def activation(self, z, function=\"relu\"):\n",
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "d51117e1",
    "metadata": {},
    "outputs": [
@@ -122,10 +124,9 @@
     "\n",
     "# First Hidden Layer\n",
     "layer1 = Dense_Layer()\n",
-    "W1 = [[0.2, 0.5, -0.3],\n",
-    "      [0.1, -0.2, 0.4],\n",
-    "      [-0.4, 0.3, 0.2],\n",
-    "      [0.6, -0.1, 0.5]]\n",
+    "W1 = [[0.2, 0.1, -0.4, 0.6],\n",
+    "      [0.5, -0.2, 0.3, -0.1],\n",
+    "      [-0.3, 0.4, 0.2, 0.5]]\n",
     "B1 = [3.0, -2.1, 0.6]\n",
     "\n",
     "layer1.setup_inputs_and_weights(X, W1, B1)\n",
@@ -136,9 +137,8 @@
     "\n",
     "# Second Hidden Layer\n",
     "layer2 = Dense_Layer()\n",
-    "W2 = [[0.3, -0.5],\n",
-    "      [0.7, 0.2],\n",
-    "      [-0.6, 0.4]]\n",
+    "W2 = [[0.3, 0.7, -0.6],\n",
+    "      [-0.5, 0.2, 0.4]]\n",
     "B2 = [4.3, 6.4]\n",
     "\n",
     "layer2.setup_inputs_and_weights(a1, W2, B2)\n",
@@ -149,8 +149,9 @@
     "\n",
     "# Output Layer\n",
     "layer3 = Dense_Layer()\n",
-    "W3 = [[0.5, -0.3, 0.8],\n",
-    "      [-0.2, 0.6, -0.4]]\n",
+    "W3 = [[0.5, -0.2],\n",
+    "      [-0.3, 0.6],\n",
+    "      [0.8, -0.4]]\n",
     "B3 = [-1.5, 2.1, -3.3]\n",
     "\n",
     "layer3.setup_inputs_and_weights(a2, W3, B3)\n",
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "9f65243e",
    "metadata": {},
    "outputs": [
@@ -191,13 +192,13 @@
       "Layer 1 Weighted Sum (z1): [11.3435  3.4755 -0.2905]\n",
       "Layer 1 Activated Output (a1): [11.3435  3.4755  0.    ]\n",
       "\n",
-      "Layer 2 Weighted Sum (z2): [ 5.86345 -1.33095]\n",
-      "Layer 2 Activated Output (a2): [0.99716663 0.20900227]\n",
+      "Layer 2 Weighted Sum (z2): [ 6.211  -2.4653]\n",
+      "Layer 2 Activated Output (a2): [0.99799679 0.07832686]\n",
       "\n",
-      "Output Layer Weighted Sum (z3): [0.79351551]\n",
-      "Final Output (a3, Probability of Malignant): [0.68858568]\n",
+      "Output Layer Weighted Sum (z3): [0.85943432]\n",
+      "Final Output (a3, Probability of Malignant): [0.70254245]\n",
       "\n",
-      "Cross-Entropy Loss: 0.3731155258314181\n",
+      "Cross-Entropy Loss: 0.35304944627096974\n",
       "Predicted Class: Malignant (1)\n"
      ]
     }
@@ -211,9 +212,9 @@
     "\n",
     "# First Hidden Layer\n",
     "layer1 = Dense_Layer()\n",
-    "W1 = [[0.5, -0.3, 0.8],\n",
-    "      [0.2, 0.4, -0.6],\n",
-    "      [-0.7, 0.9, 0.1]]\n",
+    "W1 = [[0.5, 0.2, -0.7],\n",
+    "      [-0.3, 0.4, 0.9],\n",
+    "      [0.8, -0.6, 0.1]]\n",
     "B1 = [0.3, -0.5, 0.6]\n",
     "\n",
     "layer1.setup_inputs_and_weights(X, W1, B1)\n",
@@ -224,9 +225,8 @@
     "\n",
     "# Second Hidden Layer\n",
     "layer2 = Dense_Layer()\n",
-    "W2 = [[0.6, -0.2],\n",
-    "      [-0.3, 0.5],\n",
-    "      [0.4, 0.7]]\n",
+    "W2 = [[0.6, -0.2, 0.4],\n",
+    "      [-0.3, 0.5, 0.7]]\n",
     "B2 = [0.1, -0.8]\n",
     "\n",
     "layer2.setup_inputs_and_weights(a1, W2, B2)\n",
@@ -237,7 +237,7 @@
     "\n",
     "# Output Layer\n",
     "layer3 = Dense_Layer()\n",
-    "W3 = [[0.7], [-0.5]]\n",
+    "W3 = [[0.7, -0.5]]\n",
     "B3 = [0.2]\n",
     "\n",
     "layer3.setup_inputs_and_weights(a2, W3, B3)\n",
@@ -251,37 +251,35 @@
     "print(\"\\nCross-Entropy Loss:\", loss_value)\n",
     "\n",
     "# Classification\n",
-    "predicted_label = 1 if a3 >= 0.5 else 0   # 1 = Malignant, 0 = Benign\n",
+    "predicted_label = 1 if a3 >= 0.5 else 0\n",
     "classification = \"Malignant (1)\" if predicted_label == 1 else \"Benign (0)\"\n",
-    "\n",
     "print(\"Predicted Class:\", classification)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "838a0cc5",
+   "id": "266cd9da",
    "metadata": {},
    "source": [
-    "### Addtional: Manual Cross-Entropy Loss (like in your video, sir, if needed)"
+    "### Additional: Manual Cross-Entropy Loss (like in your video, sir, if needed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5745d8ba",
+   "execution_count": null,
+   "id": "0678a3af",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss: 3.080656224018649\n",
+      "Manual Loss (Problem 2a): 3.080656224018649\n",
       "Predicted Class: Iris-versicolor (1)\n"
      ]
     }
    ],
    "source": [
-    "# Values\n",
     "softmax_output = [0.0265075, 0.96865119, 0.00484132]   # predicted\n",
     "target_output = [0.7, 0.2, 0.1]                        # target\n",
     "\n",
@@ -290,45 +288,45 @@
     "              math.log(softmax_output[1]) * target_output[1] +\n",
     "              math.log(softmax_output[2]) * target_output[2])\n",
     "\n",
-    "print(\"Loss:\", loss_long)\n",
+    "print(\"Manual Loss (Problem 2a):\", loss_long)\n",
     "\n",
     "# Predicted Class\n",
     "classes = [\"Iris-setosa\", \"Iris-versicolor\", \"Iris-virginica\"]\n",
     "predicted_index = np.argmax(softmax_output)\n",
     "predicted_class = classes[predicted_index]\n",
-    "print(\"Predicted Class:\", predicted_class, f\"({predicted_index})\")\n"
+    "print(\"Predicted Class:\", predicted_class, f\"({predicted_index})\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "60225f34",
+   "execution_count": null,
+   "id": "adb2e52d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss: 0.3731155258314181\n",
+      "Manual Loss (Problem 2b): 0.31471074483970024\n",
       "Predicted Class: Malignant (1)\n"
      ]
     }
    ],
    "source": [
-    "sigmoid_output = a3[0]   # final probability\n",
-    "target_output = 1        # malignant\n",
+    "sigmoid_output = 0.70254245   # actual final probability\n",
+    "target_output = 1             # malignant\n",
     "\n",
-    "# Long manual formula\n",
+    "# Long manual formula for binary cross-entropy\n",
     "loss_long = -(target_output * math.log(sigmoid_output) +\n",
     "              (1 - target_output) * math.log(1 - sigmoid_output))\n",
     "\n",
-    "print(\"Loss:\", loss_long)\n",
+    "print(\"Manual Loss (Problem 2b):\", loss_long)\n",
     "\n",
     "# Classification\n",
-    "predicted_label = 1 if a3 >= 0.5 else 0   # 1 = Malignant, 0 = Benign\n",
+    "predicted_label = 1 if sigmoid_output >= 0.5 else 0   # 1 = Malignant, 0 = Benign\n",
     "classification = \"Malignant (1)\" if predicted_label == 1 else \"Benign (0)\"\n",
     "\n",
-    "print(\"Predicted Class:\", classification)\n"
+    "print(\"Predicted Class:\", classification)"
    ]
   }
  ],
