Corrected .ipynb file for Exercise 2

--- a/CS 3A/MYRRHEABELLE_JUNSAY/JUNSAY-EXERCISE_2.ipynb
+++ b/CS 3A/MYRRHEABELLE_JUNSAY/JUNSAY-EXERCISE_2.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "667c766c",
    "metadata": {},
    "outputs": [
@@ -144,13 +144,13 @@
     "B3_iris = np.array([[-1.5, 2.1, -3.3]])\n",
     "activation3_iris = softmax\n",
     "\n",
-    "# First Hidden Layer\n",
+    "# Hidden Layer 1\n",
     "layer1 = Dense_Layer(W1_iris, B1_iris)\n",
     "output1_raw = layer1.forward(X_iris)\n",
     "output1_activated = activation1_iris(output1_raw)\n",
     "print(f\"Hidden Layer 1 (Output): \\n{output1_activated}\\n\")\n",
     "\n",
-    "# Second Hidden Layer\n",
+    "# Hidden Layer 2\n",
     "layer2 = Dense_Layer(W2_iris, B2_iris)\n",
     "output2_raw = layer2.forward(output1_activated)\n",
     "output2_activated = activation2_iris(output2_raw)\n",
@@ -171,6 +171,93 @@
     "predicted_class_index = np.argmax(final_output_iris)\n",
     "classes = [\"Iris-setosa\", \"Iris-versicolor\", \"Iris-virginica\"]\n",
     "print(f\"\\nPredicted Class: {classes[predicted_class_index]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc96ab00",
+   "metadata": {},
+   "source": [
+    "**Chosen problem set:** \n",
+    "\n",
+    "b) Given the inputs from the Breast Cancer Dataset, using three features: Mean Radius, Mean Texture, and Mean Smoothness, determine whether the tumor is Benign (0) or Malignant (1) by calculating the network outputs step by step, given the neural network configuration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6c52d3db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Breast Cancer Dataset Calculation\n",
+      "\n",
+      "Hidden Layer 1 (Output): \n",
+      "[[11.3435  3.4755  0.    ]]\n",
+      "\n",
+      "Hidden Layer 2 (Output): \n",
+      "[[0.99975062 0.01612148]]\n",
+      "\n",
+      "Final Predicted Output: \n",
+      "[[0.70925421]]\n",
+      "\n",
+      "Loss: 0.3435\n",
+      "\n",
+      "Predicted Class: Malignant (1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Breast Cancer Dataset Calculation\\n\")\n",
+    "\n",
+    "X_cancer = np.array([[14.1, 20.3, 0.095]])\n",
+    "\n",
+    "# Target output\n",
+    "target_cancer = 1 # Malignant\n",
+    "\n",
+    "# Layer 1\n",
+    "W1_cancer = np.array([[0.5, -0.3, 0.8], [0.2, 0.4, -0.6], [-0.7, 0.9, 0.1]])\n",
+    "B1_cancer = np.array([[0.3, -0.5, 0.6]])\n",
+    "activation1_cancer = relu\n",
+    "\n",
+    "# Layer 2\n",
+    "W2_cancer = np.array([[0.6, -0.2], [0.4, -0.3], [0.5, 0.7]])\n",
+    "B2_cancer = np.array([[0.1, -0.8]])\n",
+    "activation2_cancer = sigmoid\n",
+    "\n",
+    "# Output\n",
+    "W3_cancer = np.array([[0.7], [-0.5]]) \n",
+    "B3_cancer = np.array([[0.2]])\n",
+    "activation3_cancer = sigmoid\n",
+    "\n",
+    "# Hidden Layer 1\n",
+    "layer1_cancer = Dense_Layer(W1_cancer, B1_cancer)\n",
+    "output1_raw_cancer = layer1_cancer.forward(X_cancer)\n",
+    "output1_activated_cancer = activation1_cancer(output1_raw_cancer)\n",
+    "print(f\"Hidden Layer 1 (Output): \\n{output1_activated_cancer}\\n\")\n",
+    "\n",
+    "# Hidden Layer 2\n",
+    "layer2_cancer = Dense_Layer(W2_cancer, B2_cancer)\n",
+    "output2_raw_cancer = layer2_cancer.forward(output1_activated_cancer)\n",
+    "output2_activated_cancer = activation2_cancer(output2_raw_cancer)\n",
+    "print(f\"Hidden Layer 2 (Output): \\n{output2_activated_cancer}\\n\")\n",
+    "\n",
+    "# Output Layer\n",
+    "layer3_cancer = Dense_Layer(W3_cancer, B3_cancer)\n",
+    "output3_raw_cancer = layer3_cancer.forward(output2_activated_cancer)\n",
+    "final_output_cancer = activation3_cancer(output3_raw_cancer)\n",
+    "print(f\"Final Predicted Output: \\n{final_output_cancer}\\n\")\n",
+    "\n",
+    "# Loss Calculation\n",
+    "loss_cancer = binary_cross_entropy(final_output_cancer, target_cancer)\n",
+    "print(f\"Loss: {loss_cancer:.4f}\") \n",
+    "\n",
+    "# Determine predicted class\n",
+    "predicted_class = \"Malignant (1)\" if final_output_cancer[0][0] >= 0.5 else \"Benign (0)\"\n",
+    "print(f\"\\nPredicted Class: {predicted_class}\")"
    ]
   }
  ],
