Feat: Changed exponential decay rate to inverse time or 1/T decay rate.

--- a/CS 3A/LUIS_RAFAEL_AJOC/AJOC-ROBLES-EXERCISE-UNIT-4/AJOC-ROBLES-EXERCISE-UNIT-4.ipynb
+++ b/CS 3A/LUIS_RAFAEL_AJOC/AJOC-ROBLES-EXERCISE-UNIT-4/AJOC-ROBLES-EXERCISE-UNIT-4.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 66,
    "id": "7a7dd421",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 67,
    "id": "fc714746",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 68,
    "id": "945fa51e",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 69,
    "id": "ed37d0d5",
    "metadata": {},
    "outputs": [],
@@ -254,22 +254,33 @@
    "execution_count": null,
    "id": "054d8c85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected default value expression (3699790492.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[70]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mdef __init__(self, learning_rate=0.1, decay_rate=0.001, momentum_factor =):\u001b[39m\n                                                                            ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m expected default value expression\n"
+     ]
+    }
+   ],
    "source": [
     "# Start of Optimizers\n",
     "\n",
     "class Optimizer_SGD:\n",
     "    # Initialie the optimizer - default learning rate to 1\n",
-    "    def __init__(self, learning_rate=1.0):\n",
+    "    def __init__(self, learning_rate=0.1, decay_rate=0.001, momentum_factor=0.5):\n",
     "        self.learning_rate = learning_rate\n",
     "        self.iterations = 0\n",
-    "        self.decay_rate = 0.001\n",
+    "        self.decay_rate = decay_rate\n",
+    "        self.momentum_factor = 0.5\n",
     "\n",
     "    # Update the parameters\n",
     "    def update_params(self, layer, epoch):\n",
     "        layer.weights += -self.learning_rate * layer.dweights\n",
     "        layer.biases += -self.learning_rate * layer.dbiases\n",
-    "        self.learning_rate = self.learning_rate * np.exp((-self.decay_rate * epoch)) # Exponential learning rate decay\n",
+    "        self.learning_rate = self.learning_rate * (1/(1 + self.decay_rate * epoch)) # 1/T Decay\n",
+    "        # self.learning_rate = self.learning_rate * np.exp((-self.decay_rate * epoch)) \n",
     "        # self.learning_rate -= self.learning_rate * 0.001 # Learning rate decay\n",
     "    \n",
     "    def post_update_params(self):\n",
@@ -290,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": null,
    "id": "325fd84d",
    "metadata": {},
    "outputs": [
@@ -299,10 +310,10 @@
      "output_type": "stream",
      "text": [
       "[[-0.          0.        ]\n",
-      " [-0.00410192  0.00923064]\n",
-      " [-0.00033543  0.02019924]\n",
-      " [-0.00643273  0.02961239]\n",
-      " [-0.01792644  0.03620952]]\n",
+      " [ 0.00538167  0.00854798]\n",
+      " [ 0.01067883  0.01714888]\n",
+      " [ 0.01338883  0.02718479]\n",
+      " [ 0.01412525  0.03785451]]\n",
       "(300, 2)\n",
       "[0 0 0 0 0]\n",
       "(300,)\n"
@@ -325,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": null,
    "id": "a737644d",
    "metadata": {},
    "outputs": [],
@@ -345,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": null,
    "id": "4389c5d8",
    "metadata": {},
    "outputs": [],
@@ -383,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": null,
    "id": "497de66d",
    "metadata": {},
    "outputs": [
@@ -391,7 +402,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "acc: 0.36\n"
+      "acc: 0.33\n"
      ]
     }
    ],
@@ -423,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": null,
    "id": "183b77a8",
    "metadata": {},
    "outputs": [
@@ -456,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": null,
    "id": "5e5cabc9",
    "metadata": {},
    "outputs": [],
@@ -481,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": null,
    "id": "51242d28",
    "metadata": {},
    "outputs": [],
@@ -511,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": null,
    "id": "a690a18c",
    "metadata": {},
    "outputs": [
@@ -519,24 +530,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "acc: 0.4\n",
-      "learning rate 4.107955522530067e-05\n",
-      "acc: 0.4\n",
-      "learning rate 3.4782582787769265e-18\n",
-      "acc: 0.4\n",
-      "learning rate 6.070273852348174e-40\n",
-      "acc: 0.4\n",
-      "learning rate 2.1835598628699033e-70\n",
-      "acc: 0.4\n",
-      "learning rate 1.6189457023307482e-109\n",
-      "acc: 0.4\n",
-      "learning rate 2.474057709431771e-157\n",
-      "acc: 0.4\n",
-      "learning rate 7.792875358697575e-214\n",
-      "acc: 0.4\n",
-      "learning rate 5.059364817789733e-279\n",
-      "acc: 0.4\n",
-      "learning rate 0.0\n"
+      "acc: 0.36666666666666664\n",
+      "learning rate 5.6702594051753525e-06\n",
+      "acc: 0.36666666666666664\n",
+      "learning rate 4.014514812514869e-18\n",
+      "acc: 0.36666666666666664\n",
+      "learning rate 1.6219837373963712e-37\n",
+      "acc: 0.36666666666666664\n",
+      "learning rate 1.3520049091705668e-63\n",
+      "acc: 0.36666666666666664\n",
+      "learning rate 6.992582590937926e-96\n",
+      "acc: 0.36666666666666664\n",
+      "learning rate 5.825603810906805e-134\n",
+      "acc: 0.36666666666666664\n",
+      "learning rate 1.801037939839227e-177\n",
+      "acc: 0.36666666666666664\n",
+      "learning rate 4.314319839875704e-226\n",
+      "acc: 0.36666666666666664\n",
+      "learning rate 1.540509889088534e-279\n"
      ]
     }
    ],
