submit: exercise for unit 4

--- a/CS 3A/MACALALAG_QUINCY_RODGE/MACALALAG_EXERCISE_4.ipynb
+++ b/CS 3A/MACALALAG_QUINCY_RODGE/MACALALAG_EXERCISE_4.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 314,
    "id": "7a7dd421",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 315,
    "id": "fc714746",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 316,
    "id": "945fa51e",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 317,
    "id": "ed37d0d5",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 318,
    "id": "054d8c85",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 319,
    "id": "325fd84d",
    "metadata": {},
    "outputs": [],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 320,
    "id": "56b4c769-cef2-4ccc-ae97-e862948e72ae",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 321,
    "id": "a737644d",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 322,
    "id": "4389c5d8",
    "metadata": {},
    "outputs": [],
@@ -419,13 +419,13 @@
     "\n",
     "# ----- OPTIMIZER CONFIGURATION -----\n",
     "# --- First Run: Plain SGD ---\n",
-    "optimizer = Optimizer_SGD(learning_rate=0.1, decay=1e-3, momentum=0.0)\n",
+    "# optimizer = Optimizer_SGD(learning_rate=0.1, decay=1e-3, momentum=0.0)\n",
     "# Stochastic Gradient Descent (SGD) updates weights in the direction of the gradient.\n",
     "# With momentum=0.0, it's the “vanilla” version — can be slower and noisier,\n",
     "# but it’s good for comparison.\n",
     "\n",
     "# --- Second Run: SGD + Momentum ---\n",
-    "# optimizer = Optimizer_SGD(learning_rate=0.1, decay=1e-3, momentum=0.9)\n",
+    "optimizer = Optimizer_SGD(learning_rate=0.1, decay=1e-3, momentum=0.9)\n",
     "# The momentum version remembers past gradients and smooths updates.\n",
     "# It helps escape local minima and typically converges faster with more stable loss.\n"
    ]
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 323,
    "id": "497de66d",
    "metadata": {},
    "outputs": [
@@ -448,16 +448,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Loss: 0.903, Acc: 0.593\n",
-      "Epoch 100, Loss: 0.303, Acc: 0.947\n",
-      "Epoch 200, Loss: 0.170, Acc: 0.967\n",
-      "Epoch 300, Loss: 0.116, Acc: 0.973\n",
-      "Epoch 400, Loss: 0.091, Acc: 0.980\n",
-      "Epoch 500, Loss: 0.077, Acc: 0.980\n",
-      "Epoch 600, Loss: 0.069, Acc: 0.980\n",
-      "Epoch 700, Loss: 0.063, Acc: 0.987\n",
-      "Epoch 800, Loss: 0.059, Acc: 0.987\n",
-      "Epoch 900, Loss: 0.056, Acc: 0.987\n",
+      "Epoch 0, Loss: 1.200, Acc: 0.520\n",
+      "Epoch 100, Loss: 0.038, Acc: 0.987\n",
+      "Epoch 200, Loss: 0.027, Acc: 0.987\n",
+      "Epoch 300, Loss: 0.019, Acc: 0.993\n",
+      "Epoch 400, Loss: 0.013, Acc: 1.000\n",
+      "Epoch 500, Loss: 0.009, Acc: 1.000\n",
+      "Epoch 600, Loss: 0.007, Acc: 1.000\n",
+      "Epoch 700, Loss: 0.006, Acc: 1.000\n",
+      "Epoch 800, Loss: 0.005, Acc: 1.000\n",
+      "Epoch 900, Loss: 0.004, Acc: 1.000\n",
       "\n",
       "Final comparison:\n",
       "Predictions: [0 0 0 0 0 0 0 0 0 0]\n",
@@ -513,50 +513,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 324,
    "id": "183b77a8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(150, 8)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_17543/4089102767.py:81: RuntimeWarning: divide by zero encountered in divide\n",
-      "  self.dinputs = -y_true / dvalues\n",
-      "/tmp/ipykernel_17543/4089102767.py:81: RuntimeWarning: invalid value encountered in divide\n",
-      "  self.dinputs = -y_true / dvalues\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Perform a backward pass of our training data\n",
-    "# From loss to 2nd softmax activation\n",
-    "loss_function.backward(activation2.output, y)\n",
-    "dvalues = loss_function.dinputs # Gradient of the loss w.r.t softmax output\n",
+    "# ----- Backward Pass -----\n",
+    "# Combined Softmax + CCE backward (from final output layer)\n",
+    "loss_activation.backward(dense3.output, y)\n",
+    "dvalues = loss_activation.dinputs  # gradient ready for backprop\n",
     "\n",
-    "print(dvalues.shape)\n",
-    "# print(dvalues)\n",
-    "\n",
-    "# From 2nd softmax to 2nd dense layer\n",
-    "activation2.backward(dvalues)\n",
-    "# From 2nd dense layer to 1st ReLU activation\n",
+    "# Backprop through the layers\n",
+    "dense3.backward(dvalues)\n",
+    "activation2.backward(dense3.dinputs)\n",
     "dense2.backward(activation2.dinputs)\n",
-    "\n",
-    "# From 1st ReLU activation to 1st dense layer\n",
     "activation1.backward(dense2.dinputs)\n",
-    "dense1.backward(activation1.dinputs)"
+    "dense1.backward(activation1.dinputs)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 325,
    "id": "5e5cabc9",
    "metadata": {},
    "outputs": [
@@ -564,34 +541,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.03742512 -0.02503555 -0.97576136 -0.54345757  0.4956472   0.32721303\n",
-      "   0.15203753  0.47787319]\n",
-      " [-0.05276055  0.14791076  0.1325332   0.11814028 -0.04274488 -0.05922996\n",
-      "   0.03849154 -0.13584872]\n",
-      " [-0.01653393 -0.04651052 -0.6713811  -0.40827398  0.34629214  0.24350544\n",
-      "   0.07811247  0.3679393 ]\n",
-      " [-0.00589372 -0.02224812 -0.47124062 -0.28613283  0.21360845  0.17152169\n",
-      "   0.09194329  0.25724844]]\n",
-      "[[ 0.04026714 -0.50836703 -0.89743878 -0.35406682  0.37552392  0.17207583\n",
-      "  -0.05747556  0.20581067]]\n",
-      "[[ 0.         -0.02700632  0.          0.          0.          0.\n",
-      "   0.          0.        ]\n",
-      " [ 0.         -1.7988825  -1.23890233  0.          0.          0.\n",
-      "   0.          0.        ]\n",
-      " [ 0.         -0.34509055 -0.72941775  0.          0.          0.\n",
-      "   0.          0.        ]\n",
-      " [ 0.         -2.07496145 -1.16168039  0.          0.          0.\n",
-      "   0.          0.        ]\n",
-      " [ 0.         -0.32053136 -0.16810948  0.          0.          0.\n",
-      "   0.          0.        ]\n",
-      " [ 0.         -0.25144716 -0.35931143  0.          0.          0.\n",
-      "   0.          0.        ]\n",
-      " [ 0.         -0.91544229 -0.11933059  0.          0.          0.\n",
-      "   0.          0.        ]\n",
-      " [ 0.         -0.47814552 -0.60419493  0.          0.          0.\n",
-      "   0.          0.        ]]\n",
-      "[[ 0.         -1.32072177 -0.47094403  0.          0.          0.\n",
-      "   0.          0.        ]]\n"
+      "[[ 32.35516878  -2.14284284 -62.67526064 -45.33322021  16.42893228\n",
+      "    8.7934406   50.72288929  -4.12104801]\n",
+      " [ -3.04309566   2.65446158  29.11433096  39.15122448   2.26057737\n",
+      "   -4.13094683 -14.06868597  -3.30851075]\n",
+      " [ 33.22751167  -3.13061338 -73.30332279 -58.09679251  11.85051792\n",
+      "   10.00907129  55.12085394  -3.32789895]\n",
+      " [ 36.11447244  -2.99619215 -71.90831201 -56.05649133   9.21070013\n",
+      "    9.53531359  59.77485331  -3.52022175]]\n",
+      "[[28.24658459  2.39530611 69.80732913 44.90513704  7.82253556 -8.16675351\n",
+      "  46.83651128  5.50910333]]\n",
+      "[[ 0.00000000e+00  5.85260105e+01 -8.84296411e-01  0.00000000e+00\n",
+      "   0.00000000e+00  6.41398686e+01  0.00000000e+00 -5.65663913e+01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  5.07236215e+00  0.00000000e+00\n",
+      "   4.11465358e+00  0.00000000e+00  3.19198156e+00  7.02167277e+00]\n",
+      " [-4.51325057e-03 -1.63625141e+00  5.60555756e+01  0.00000000e+00\n",
+      "   3.40814006e+01 -2.56530915e+00  2.53767100e+01  7.24214860e+01]\n",
+      " [ 0.00000000e+00 -1.52856721e+00  1.18196126e+02  0.00000000e+00\n",
+      "   8.31564513e+01 -2.27586590e+00  6.34252773e+01  1.58216641e+02]\n",
+      " [ 0.00000000e+00  1.49278695e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  1.65761065e+00  0.00000000e+00 -1.52508991e+00]\n",
+      " [ 0.00000000e+00 -1.76015014e-01  2.92033349e+01  0.00000000e+00\n",
+      "   2.12380434e+01 -2.08380954e-01  1.62696403e+01  3.94009897e+01]\n",
+      " [ 0.00000000e+00  2.01801323e+01  1.20684481e+01  0.00000000e+00\n",
+      "  -1.75165243e+00  2.09373141e+01 -2.66218997e+00 -3.10374667e+00]\n",
+      " [ 0.00000000e+00 -6.35330923e-01  2.01551929e+01  0.00000000e+00\n",
+      "   1.16193889e+01 -8.93174852e-01  8.58705251e+00  2.58018889e+01]]\n",
+      "[[-0.03051177 11.47833781 27.21516494  0.         13.28772847 11.22006389\n",
+      "   9.50951268 23.14296816]]\n"
      ]
     }
    ],
